fix styles for collapsed header

--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -75,16 +75,22 @@ p, .badge {
 	  opacity: 0.8;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
 	  .navbar {
 			padding: 0;
-			font-size: 4rem;
+			opacity: 0.9;
 	  }
-	  .collapse {
-			font-size: 4rem;
-			height: 50px;
+	  #navbarSupportedContent {
+			background: black;
+	  }
+	  #navbarSupportedContent li {
+			text-align: center;
+			font-size: 1.3rem;
+			color: white;
+			font-weight: bold;
 	  }
 }
+
 
 ////////////////////////////////////////////////////
 header {
